--- a/wordscappes/index.html
+++ b/wordscappes/index.html
@@ -1,4 +1,6 @@
 <link rel="stylesheet" href="styles.css">
+<title>Wordscapes</title>
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 <svg viewBox="0 0 100 100" id="wordscapesGame">
 	<circle class="circleShadow" cx="50" cy="50" r="38" />
 	<circle class="circleBG" cx="50" cy="50" r="40" />
