--- a/Gorilla game/index.html
+++ b/Gorilla game/index.html
@@ -1,4 +1,6 @@
 <link rel="stylesheet" href="styles.css">
+<title>Gorilla Game</title>
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 <canvas id="game"></canvas>
 
 <svg width="200" height="250" id="windmill">
