--- a/Text overlay/index.html
+++ b/Text overlay/index.html
@@ -34,7 +34,7 @@
 		<div class="card">
 			<a href="#">
 				<span class="caption">
-					<h2>Green Lantern Corps</h2>
+					<h2>Green Lantern</h2>
 					<p class="desc">Green Lantern Corps is the name of a fictional intergalactic law enforcement organization appearing in comics published by DC Comics. They patrol the farthest reaches of the DC Universe at the behest of the Guardians, a race of immortals residing on the planet Oa.</p>
 				</span>
 				<img src="https://assets.codepen.io/2856/glc_teamwork.jpg">
